[package]
name = "cch23-santa3398"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.2", features = ["multipart", "ws"] }
shuttle-axum = { version = "0.35.0", default-features = false, features = [
    "axum-0-7",
] }
shuttle-runtime = "0.35.0"
tokio = "1.34.0"
tracing = "0.1.40"
anyhow = "1.0.75"
serde = "1.0.193"
serde_json = "1.0.108"
axum-macros = "0.4.0"
ordered-float = "4.2.0"
thiserror = "1.0.50"
itertools = "0.12.0"
automod = "1.0"
base64 = "0.21.5"
axum-extra = { version = "0.9.0", features = ["cookie"] }
reqwest = { version = "0.11.22", features = ["json"] }
tower-http = { version = "0.5.0", features = ["fs"] }
image = "0.24.7"
ulid = "1.1.0"
uuid = "1.6.1"
chrono = "0.4.31"
shuttle-shared-db = { version = "0.35.1", features = ["postgres", "sqlx"] }
sqlx = "0.7.3"
askama = "0.12.1"
unic = "0.9.0"
sha256 = "1.4.0"
futures = "0.3.29"
tar = "0.4.40"
tempfile = "3.8.1"
